--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-merlot
+theme: jekyll-theme-dinky
 title : Nigama Kalpataru
 description : The official website of Nigama Kalpataru
